# acapture

./: .gitignore  Cargo.toml  README.md  test.py
src/: acapture.pyi  lib.rs  main.rs
src/utils/: error.rs
