[package]
name = "acapture"
version = "0.1.0"
edition = "2021"

[dependencies]
scap = { path = "../scap"}
once_cell = "1.10"
colored = "2.0" # for coloured prints

# python bindings
pyo3 = { version = "0.21", features = ["extension-module"] }
numpy = { version = "0.21" }

[lib]
crate-type = ["cdylib"]

[package.metadata.maturin]
bindings = "pyo3"